--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,7 @@
+*,::before, ::after{
+  box-sizing: border-box;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +14,10 @@ body {
   overflow-X: hidden;
 }
 
+#fullpage {
+  height: 100vh;
+  overflow: hidden;
+}
 
 h1,
 h2,
@@ -32,11 +40,17 @@ h3 {
 }
 
 section {
-  border: 1px solid red;
-  width: 90vw;
+  width: 100vw;
   height: 90vh;
   padding: 5vh 5vw;
   overflow: hidden;
+}
+
+.title-wrap{
+  margin-bottom: 1rem;
+  h2{
+    font-size: 2rem;
+  }
 }
 
 li svg {
@@ -84,10 +98,43 @@ button {
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
+.hasBG{
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.hasBG:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.08;
+  background-image: url(../images/flat2.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
 
 //Nav menu in desctop
 
 @media (orientation: landscape) and (min-width: 700px) {
+  section {
+    width: 90vw;
+    height: 90vh;
+    padding: 5vh 5vw;
+    overflow: hidden;
+  }
+  
   nav {
     width: 45px;
     height: 100vh;
@@ -118,3 +165,30 @@ button {
   }
 }
 
+.img-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.sroped-img {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  right: -9999px;
+  bottom: -9999px;
+  margin: auto;
+  max-width: 100%;
+}
+
+
+
+@media (orientation: landscape) and (min-width: 700px){
+  .title-wrap{
+    margin-bottom: 1rem;
+    h2{
+      font-size: 2rem;
+    }
+  }
+  
+}
