--- a/app/scss/blog.scss
+++ b/app/scss/blog.scss
@@ -1,17 +1,43 @@
-.news-item{
-    background-color: $gray;
-    
-    &--img{
-        height: 30vh;
-        display: flex;
-        flex-direction: column;
-    }
+.news-item {
+  background-color: $gray;
+  display: flex;
+  flex-direction: column;
+  &--img {
+    height: 30vh;
+  }
+  &--content {
+    padding: 3vw;
+  }
+  &--text {
+    text-align: justify;
+  }
+}
 
-    &--content{
-        padding: 3vw;
-    }
-    &--text{
-        text-align: justify;
-    }
-    
+@media (orientation: landscape) and (min-width: 700px) {
+  .news-wrap {
+    height: 70vh;
+    display: flex;
+    justify-content: space-between;
+  }
+  .news-item{
+      height: 100%;
+      width: 48%;
+  }
+
+  
+  .news-item--content{
+      height: 60%;
+  }
+  .news-title{
+      margin-bottom: 4%;
+  }
+  .news-item--text{
+      height: 4rem;
+      overflow: hidden;
+      font-size:13px;
+  }
+  .news-item--hashtags{
+    font-size:13px;
+
+  }
 }
