--- a/app/styles/all.css
+++ b/app/styles/all.css
@@ -1,3 +1,6 @@
+*, ::before, ::after {
+  box-sizing: border-box; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -8,6 +11,10 @@ body {
   font-family: "Montserrat", sans-serif;
   color: #fff;
   overflow-X: hidden; }
+
+#fullpage {
+  height: 100vh;
+  overflow: hidden; }
 
 h1,
 h2,
@@ -26,11 +33,15 @@ h3 {
   font-size: 5vh; }
 
 section {
-  border: 1px solid red;
-  width: 90vw;
+  width: 100vw;
   height: 90vh;
   padding: 5vh 5vw;
   overflow: hidden; }
+
+.title-wrap {
+  margin-bottom: 1rem; }
+  .title-wrap h2 {
+    font-size: 2rem; }
 
 li svg {
   fill: #fff;
@@ -71,7 +82,37 @@ button {
   text-transform: uppercase;
   letter-spacing: 0.1em; }
 
+.hasBG {
+  position: relative;
+  z-index: 1;
+  overflow: hidden; }
+
+.hasBG:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.08;
+  background-image: url(../images/flat2.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover; }
+
 @media (orientation: landscape) and (min-width: 700px) {
+  section {
+    width: 90vw;
+    height: 90vh;
+    padding: 5vh 5vw;
+    overflow: hidden; }
   nav {
     width: 45px;
     height: 100vh;
@@ -95,66 +136,6 @@ button {
     height: 100vh;
     margin-left: 45px; } }
 
-.first-screen {
-  position: relative;
-  padding: 0;
-  display: grid;
-  grid-template-rows: 60vh 40vh;
-  grid-template-areas: "first-screen-content" "first-screen-images"; }
-
-.first-screen-content-wraper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: space-around;
-  width: 90vw;
-  padding: 5vw;
-  grid-area: first-screen-content;
-  text-align: center; }
-  .first-screen-content-wraper h1 {
-    flex-basis: 30%; }
-  .first-screen-content-wraper p {
-    flex-basis: 30%;
-    font-size: 25px; }
-  .first-screen-content-wraper button {
-    justify-self: center;
-    width: 60vw;
-    height: 7vh; }
-
-.first-screen-images-wraper {
-  clip-path: polygon(58% 0, 100% 0%, 100% 100%, 41% 100%);
-  grid-area: first-screen-images;
-  z-index: -1;
-  bottom: 0;
-  display: grid;
-  grid-template-columns: 50vw 50vw;
-  grid-template-areas: "img-left img-right"; }
-
-.first-screen-bg {
-  background: url(../images/flat.jpg) center;
-  background-size: cover;
-  height: 90vh;
-  width: 100vw;
-  position: absolute;
-  z-index: -2;
-  opacity: 0.09; }
-
-.apartment-sub {
-  font-size: 20px; }
-
-.apartment-dis {
-  padding-top: 20px;
-  padding-left: 30px; }
-
-.booking-btn {
-  margin-top: 20px;
-  padding: 15px 20px; }
-
-.swipe {
-  padding: 10px 20px; }
-  .swipe svg {
-    height: 60px; }
-
 .img-container {
   position: relative;
   overflow: hidden;
@@ -169,65 +150,219 @@ button {
   margin: auto;
   max-width: 100%; }
 
+@media (orientation: landscape) and (min-width: 700px) {
+  .title-wrap {
+    margin-bottom: 1rem; }
+    .title-wrap h2 {
+      font-size: 2rem; } }
+
+.first-screen {
+  position: relative;
+  padding: 0;
+  display: grid;
+  grid-template-rows: 60vh 40vh;
+  grid-template-areas: "first-screen-content" "first-screen-images"; }
+
+.first-screen-content-wraper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-around;
+  width: 100vw;
+  padding: 5vw;
+  grid-area: first-screen-content;
+  text-align: center; }
+  .first-screen-content-wraper h1 {
+    flex-basis: 30%; }
+  .first-screen-content-wraper p {
+    flex-basis: 20%;
+    font-size: 25px; }
+  .first-screen-content-wraper button {
+    justify-self: center;
+    width: 70vw;
+    height: 7vh; }
+
+.first-screen-images-wraper {
+  grid-area: first-screen-images;
+  z-index: -1; }
+
+@media (orientation: landscape) and (min-width: 700px) {
+  .first-screen {
+    grid-template-rows: 1fr;
+    grid-template-columns: 48vw auto;
+    grid-template-areas: "first-screen-content first-screen-images"; }
+  .first-screen-content-wraper {
+    width: 100%;
+    padding: 5vw;
+    grid-area: first-screen-content;
+    text-align: left; }
+    .first-screen-content-wraper h1 {
+      font-size: 3rem;
+      flex-basis: 30%; }
+    .first-screen-content-wraper p {
+      flex-basis: 30%;
+      font-size: 25px; }
+    .first-screen-content-wraper button {
+      justify-self: center;
+      width: 20vw;
+      font-size: 1rem;
+      height: 5vw; }
+  .first-screen-images-wraper {
+    height: 100vh;
+    clip-path: polygon(20% 10%, 90% 10%, 90% 90%, 0 90%);
+    grid-area: first-screen-images;
+    z-index: -1;
+    bottom: 0;
+    grid-template-columns: 1fr; } }
+
+.apartment-sub {
+  font-size: 1rem; }
+
+.apartment-dis {
+  font-size: 0.8rem;
+  padding-top: 20px;
+  padding-left: 30px; }
+
+.booking-btn {
+  margin-top: 20px;
+  padding: 15px 20px; }
+
+.apartment-cont-wraper {
+  width: 70%; }
+  .apartment-cont-wraper h3, .apartment-cont-wraper p {
+    text-align: center; }
+  .apartment-cont-wraper button {
+    font-size: 1rem; }
+
+.swipe {
+  width: 12%;
+  padding: 5px 10px; }
+  .swipe svg {
+    width: 100%; }
+
 .apartment {
   background-color: #3d3d3d;
-  height: 100vh;
+  height: 70vh;
   display: grid;
-  grid-template-columns: 6fr 4fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "1bl 2bl"; }
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-template-areas: "1bl" "a2bl"; }
   .apartment--1bl {
+    overflow: visible;
     grid-area: 1bl;
-    background-color: pink;
-    display: grid;
-    grid-template-rows: 8fr 2fr;
-    grid-template-columns: 1fr;
-    grid-template-areas: "mainImg" "smallImgs"; }
+    display: block; }
     .apartment--1bl-main-img {
-      background-color: #915151;
+      width: 100%;
+      height: 100%;
+      display: block;
       grid-area: mainImg; }
     .apartment--1bl-small-imgs {
-      grid-area: smallImgs;
-      display: flex; }
+      display: none; }
   .apartment--2bl {
-    grid-area: 2bl;
-    background-color: blue;
+    background-color: #3d3d3d;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+@media (orientation: landscape) and (min-width: 700px) {
+  .apartment-sub {
+    font-size: 1rem; }
+  .apartment-dis {
+    font-size: 0.8rem;
+    padding-top: 20px;
+    padding-left: 30px; }
+  .booking-btn {
+    margin-top: 20px;
+    padding: 15px 20px; }
+  .apartment-cont-wraper {
+    width: 70%; }
+    .apartment-cont-wraper h3, .apartment-cont-wraper p {
+      text-align: center; }
+    .apartment-cont-wraper button {
+      font-size: 1rem; }
+  .swipe {
+    width: 12%;
+    padding: 5px 10px; }
+    .swipe svg {
+      width: 100%; }
+  .apartment {
+    background-color: #3d3d3d;
+    height: 70vh;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20vh minmax(150px, 60vh);
-    grid-template-areas: "2img" "2dis"; }
-    .apartment--2bl-img {
-      grid-area: 2img;
-      background-color: #fff; }
-    .apartment--2bl-dis {
-      grid-area: 2dis;
-      overflow: hidden !important;
+    grid-template-columns: 6fr 4fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "1bl a2bl"; }
+    .apartment--1bl {
+      grid-area: 1bl;
+      display: grid;
+      grid-template-rows: 8fr 2fr;
+      grid-template-columns: 1fr;
+      grid-template-areas: "mainImg" "smallImgs"; }
+      .apartment--1bl-main-img {
+        grid-area: mainImg; }
+      .apartment--1bl-small-imgs {
+        grid-area: smallImgs;
+        display: flex; }
+    .apartment--2bl {
+      grid-area: a2bl;
+      background-color: #3d3d3d;
       background-color: #3d3d3d;
       display: flex;
+      justify-content: center;
       align-items: center; }
+  .apartment-img:hover {
+    max-width: 110%;
+    transition: 0.2s;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.76), 0 1px 2px rgba(0, 0, 0, 0.24); } }
 
 .cost-item {
   padding-top: 20px; }
   .cost-item h3 {
     font-size: 30px; }
 
+.cost-call-to-action {
+  margin-top: 3rem;
+  text-align: center; }
+  .cost-call-to-action h3 {
+    font-size: 2rem; }
+
+@media (orientation: landscape) and (min-width: 700px) {
+  .cost-item {
+    padding-top: 20px; }
+    .cost-item h3 {
+      font-size: 1.5rem; } }
+
 .news-item {
-  background-color: #3d3d3d; }
+  background-color: #3d3d3d;
+  display: flex;
+  flex-direction: column; }
   .news-item--img {
-    height: 30vh;
-    display: flex;
-    flex-direction: column; }
+    height: 30vh; }
   .news-item--content {
     padding: 3vw; }
   .news-item--text {
     text-align: justify; }
 
-*, ::before, ::after {
-  box-sizing: border-box; }
+@media (orientation: landscape) and (min-width: 700px) {
+  .news-wrap {
+    height: 70vh;
+    display: flex;
+    justify-content: space-between; }
+  .news-item {
+    height: 100%;
+    width: 48%; }
+  .news-item--content {
+    height: 60%; }
+  .news-title {
+    margin-bottom: 4%; }
+  .news-item--text {
+    height: 4rem;
+    overflow: hidden;
+    font-size: 13px; }
+  .news-item--hashtags {
+    font-size: 13px; } }
 
 form {
-  padding: 50px 0;
-  width: 80vw;
   max-width: 400px;
   margin: 0px auto; }
   form h1 {
@@ -343,16 +478,11 @@ input[type=tel]::-webkit-outer-spin-button {
   text-align: center;
   margin: 20px 0; }
 
-/* Hover */
-.form_radio_btn label:hover {
-  border: 1px solid #fff;
-  color: #fff; }
-
-.contacts {
+.form-content--contacts {
   text-align: center; }
-  .contacts h3 {
+  .form-content--contacts h3 {
     font-size: 200%; }
-  .contacts p {
+  .form-content--contacts p {
     font-size: 150%;
     padding-top: 10px; }
 
@@ -388,5 +518,15 @@ input[type=tel]::-webkit-outer-spin-button {
   100% {
     top: -10%;
     left: -10%; } }
+
+@media (orientation: landscape) and (min-width: 700px) {
+  .form-content {
+    display: flex;
+    justify-content: space-between; }
+  .form-content--form {
+    width: 48%  !important; }
+  .form-content--contacts {
+    text-align: left;
+    width: 48%; } }
 
 /*# sourceMappingURL=all.css.map */
